--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "typescript-study",
   "version": "1.0.0",
-  "description": "typescript-study",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,10 +15,5 @@
   "bugs": {
     "url": "https://github.com/ranckprogram/typescript-study/issues"
   },
-  "homepage": "https://github.com/ranckprogram/typescript-study#readme",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1",
-    "typescript": "^4.6.2"
-  }
+  "homepage": "https://github.com/ranckprogram/typescript-study#readme"
 }
